--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ДЗ по Веб-программированию</title>
+    <title>ДЗ по веб-программированию</title>
 </head>
-<body>
-
+    <body>
+        <h1>ДЗ по веб-программированию</h1>
     <!-- Список гиперссылок -->
     <ul>
         <!-- Абсолютные ссылки -->
@@ -14,7 +12,7 @@
         <li><a href="https://kubsu.ru">Ссылка на главную страницу kubsu.ru (HTTPS)</a></li>
 
         <!-- Ссылка изображение -->
-        <li><a href="https://www.example.com"><img src="https://via.placeholder.com/150" alt="Ссылка-изображение"></a></li>
+        <li><a href="https://upload.wikimedia.org/wikipedia/commons/thumb/b/ba/Flower_jtca001.jpg/525px-Flower_jtca001.jpg" >Ссылка-изображение</a></li>_jtca001.jpg"><img src="https://via.placeholder.com/150" alt="Ссылка-изображение"></a></li>
 
         <!-- Сокращенные ссылки -->
         <li><a href="/about">Сокращенная ссылка на внутреннюю страницу</a></li>
@@ -43,7 +41,7 @@
 
         <!-- Ссылки из областей изображения -->
         <li>
-            <img src="https://via.placeholder.com/300x200" usemap="#imagemap" alt="Карта изображения">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/ba/Flower_jtca001.jpg/525px-Flower_jtca001.jpg" usemap="#imagemap" alt="Карта изображения">
             <map name="imagemap">
                 <area shape="rect" coords="34,44,270,350" href="https://www.example.com" alt="Прямоугольная область">
                 <area shape="circle" coords="337,300,44" href="https://www.example.com" alt="Круглая область">
